--- a/index.html
+++ b/index.html
@@ -196,12 +196,12 @@
             
             <div class="products">
                 <div class="product-card">
-                    <div class="product-image">
-                        <img src="https://via.placeholder.com/300" alt="Produk 1">
+                    <div class="https://img1.pixhost.to/images/6994/618830133_imgtmp.jpg">
+                        <img src="https://img1.pixhost.to/images/6994/618830133_imgtmp.jpg" alt="Produk 1">
                     </div>
                     <div class="product-info">
                         <div class="product-title">Produk 1</div>
-                        <div class="product-price">Rp 250.000</div>
+                        <div class="product-price">Rp 35.000</div>
                         <a href="#" class="btn">Beli Sekarang</a>
                     </div>
                 </div>
